2009-10-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to use cron-like syntax in automatic sync configuration

2009-10-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility of auto-syncing each import configuration separately

2009-09-30  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added reporting by email

2009-07-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added hooks for post-processing after tcemain operations

2009-06-19  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added capacity to use either gabriel or scheduler (TYPO3 4.3+)
	* Added usage of autoloader (TYPO3 4.3+)

2009-06-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added configuration option for setting fixed value maps
	* Released version 0.10.0

2009-06-02  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added configuration option for setting fixed values

2009-03-24  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added option for clearing output
	* Updated the manual
	* Released version 0.9.0

2009-03-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved error reporting for TCEmain errors

2009-01-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added preprocessRawRecordset hook

2009-01-18  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Raised status to beta
	* Released version 0.8.0

2009-01-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added unsetting of values that cannot be mapped during the transform step

2008-12-16 Stephane Garchery (Cobweb) <typo3@cobweb.ch>

	* Add set_time_limit option

2008-12-12  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected path to table icons
	* Cleaned up MM-relations configuration
	* Updated manual accordingly

2008-12-06  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added enforcePid property
	* Added hook for preprocessing uid list before delete

2008-12-01  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added hooks for preprocessing records before insert and update